@@ -1,9 +1,5 @@
 #include "system.h"
 
-#if defined(HAVE_STDINT_H)
-#include <stdint.h>
-#endif
-
 #include "tiger.h"
 #include <beecrypt/mp.h>
 #include <beecrypt/endianness.h>
