@@ -10,6 +10,9 @@
 #endif
 
 #include <sys/types.h>
+#if defined(HAVE_STDINT_H)
+#include <stdint.h>
+#endif
 #if defined(HAVE_INTTYPES_H)
 #include <inttypes.h>
 #endif
